# ANGLE.Static

./: args-x86.gn
.github/actions/setup/: action.yml
.github/workflows/: build.yml
