# Set build arguments here. See `gn help buildargs`.
is_official_build = false
is_component_build = false
is_clang = false
is_debug = false

angle_is_msvc = true
symbol_level = 0
use_custom_libcxx = false
use_lld = false
use_thin_lto = false

chrome_pgo_phase = false

angle_build_tests = false
build_angle_deqp_tests = false

angle_enable_swiftshader = false
angle_enable_wgpu = false
angle_enable_vulkan = false

windows_sdk_version = "10.0.26100.0"

# Target x86 architecture
target_cpu = "x86"

# Disable copying of all DLLs to avoid x86 debugging tools requirement
copy_dlls = false

# Disable Windows toolchain setup to avoid debugging tools requirement
win_use_custom_toolchain = false

# Additional settings for stable x86 build
enable_dsyms = false
enable_stripping = false